...
        }
    }
}

@Composable
private fun RowScope.CalendarCell(
    tag: String? = null,
    square: Boolean = true,
    content: @Composable BoxScope.() -> Unit,
) {
    val modifier = Modifier
        .weight(1f)
        .let { base -> if (square) base.aspectRatio(1f) else base.height(40.dp) }
...
